--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
@@ -135,7 +135,7 @@
                 <input type="hidden" id="Id" />
                 <div class="form-group">
                     <label class="control-label">Admin Comment</label>
-                    <input id="ModiferComment" type="text" class="form-control" placeholder="Name">
+                    <input id="ModiferComment" type="text" class="form-control" placeholder="Optional comment for future query">
                 </div>
 
             </div>
