--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddCategory.cshtml
@@ -1,4 +1,14 @@
-﻿<div class="row">
+﻿<style>
+    .left-border {
+        margin-top: 77px;
+    }
+
+    .row {
+        min-height: 100vh;
+    }
+</style>
+
+<div class="row">
     <div class="col-md-4">.</div>
     <div class="col-md-4">
         <img class="left-border" src="~/images/border.png" />
