--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddKeyword.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/AddKeyword.cshtml
@@ -1,19 +1,24 @@
 ﻿@model List<Questions.Domain.Category>
 
 <style>
-    .row {
-            margin-top: 58px;
-                margin-left: -434px;
+    .customrow {
+        margin-top: 58px;
+        margin-left: -434px;
+    }
+
+    .customtable {
+        margin-left: 244px;
     }
 </style>
-<div class="row">
+
+<div class="row customrow">
     <div class="col-md-4">
         .
     </div>
     <div class="col-md-4">
         <div class="panel-body">
 
-            <table class="table" id="myTable">
+            <table class="table customtable" id="myTable">
                 <thead>
                 <tr>
                     <th style="width:1%">
