--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
@@ -4,6 +4,10 @@
         margin-top: 58px;
         margin-left: -434px;
     }
+
+    .table {
+        margin-left: 244px;
+    }
 </style>
 
 <div class="row">
