--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewBag.Title = "Index";
 }
+<style>
+      .table {
+                margin-left: 244px;
+        }
+</style>
 <br />
 <br />
 
