--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,47 +1,27 @@
-﻿<style>
-    .profile-tabs {
-        margin-top: 120px;
-    }
-
-        .profile-tabs > li {
-            float: left;
-            background-color: #ededed;
-            margin-left: 5px;
-            padding: 10px;
-            min-width: 70px;
-            text-align: center;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-            font-size: 15px;
-        }
-
-            .profile-tabs > li :focus {
-                background-color: #a5a3a3;
-            }
-
-    .tab-border {
-        margin-top: -20px;
-    }
-</style>
-<div class="row dash-panel">
-    <div class="col-lg-2 col-md-offset-2">
-        <div class="profile-pic">
-            <img class="profile-img" src="{{imageLink}}" />
+﻿<div class="row">
+    <div class="col-md-10" style="height:60vh; border:1px solid">
+        <div class="row" style="height:10vh; border:1px solid"><profile-info></profile-info>></div>
+        <div class="row">
+            <div class="col-md-2" style="height:60vh; border:1px solid">
+                <ul>
+                    <li><a routerLink="/dashboard/viewprofile/user-question">Question</a></li>
+                    <li><a routerLink="/dashboard/viewprofile/user-answer">Answer</a></li>
+                    <li><a routerLink="/dashboard/viewprofile/follower">follower</a></li>
+                    <li><a routerLink="/dashboard/viewprofile/following">following</a></li>
+                    <li><a routerLink="/dashboard/viewprofile/bookmark">bookmark</a></li>
+                    <li><a routerLink="/dashboard/viewprofile/blog-create">Blog Create</a></li>
+                    <li><a routerLink="/dashboard/blog-post">Blog Post</a></li>
+                </ul>
+            </div>
+            <div class="col-md-10" style="height:60vh; border:1px solid">
+                <router-outlet></router-outlet>
+            </div>
         </div>
-        <img class="profile-border" src="../images/border-horizontal.png" />
     </div>
-    <div class="col-md-6">
-        <div class="row">
-            <ul class="profile-tabs">
-                <li><a routerLink="/dashboard/viewprofile/general">General</a></li>
-                <li><a routerLink="/dashboard/viewprofile/projects">Projects</a></li>
-                <li><a routerLink="/dashboard/viewprofile/questions">Questions</a></li>
-                <li><a routerLink="/dashboard/viewprofile/services">Services</a></li>
-            </ul>
-            <img class="profile-border tab-border" src="../images/border-horizontal.png" />
+    <div class="col-md-2" style="height:60vh; border:1px solid">
+        <div style="height:20vh; border:1px solid">
+            <h1>Credentials</h1>
         </div>
-        <div class="row">
-            <router-outlet></router-outlet>
-        </div>
+        <profile-stat></profile-stat>
     </div>
 </div>
