--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
@@ -1,28 +1,46 @@
 ﻿<div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
-    
-    <div class="dialog" >
-        <div class="exit-button" (click)="onClickedExit()">x</div>
-        <header>
-            <div class="question-title">
-                <user-info [userObj]="question.userViewModel" [viewDate]="question?.createdOn" [isAnonymous]="question?.isAnonymous"></user-info>
-                <h3>
-                    {{question.title}}
-                </h3>
-            </div>
-        </header>
-        <div class="panel-article">
-            <div class="details-container">
-                <div class="article-details">                   
-                    <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
-                    <div>                       
-                        <p class="answer-text" [innerHTML]="question.bestAnswer?.text"></p>
-                        <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question?.bestAnswer"> </ap-status>
-                        <ap-comment [isQuestion]='false' [questionId]="question?.id" [answerId]="question?.bestAnswer?.id"></ap-comment>
-                        <br />
-                        <button *ngIf="question.answerCount>1" class="btn btn-default" [routerLink]="['/question/detail',question.id]">View Other {{question?.answerCount-1}} answers</button>
+    <div *ngIf="!showQuestionEditForm">
+        <div class="dialog">
+            <div class="exit-button" (click)="onClickedExit()">x</div>
+            <header>
+                <div class="question-title">
+                    <user-info [userObj]="question.userViewModel" [viewDate]="question?.createdOn" [isAnonymous]="question?.isAnonymous"></user-info>
+                    <h3>
+                        {{question.title}}
+                    </h3>
+                </div>
+            </header>
+            <div class="panel-article">
+                <div class="details-container">
+                    <div class="article-details">
+                        <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
+                        <div>
+                            <p class="answer-text" [innerHTML]="question.bestAnswer?.text"></p>
+                            <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question?.bestAnswer" (onQuestionDetailClicked)="onQuestionDetailClicked($event)"> </ap-status>
+                            <ap-comment [isQuestion]='false' [questionId]="question?.id" [answerId]="question?.bestAnswer?.id"></ap-comment>
+                            <br />
+                            <button *ngIf="question.answerCount>1" class="btn btn-default" [routerLink]="['/question/detail',question.id]">View Other {{question?.answerCount-1}} answers</button>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div *ngIf="showQuestionEditForm">
+        <div class="dialog">
+            <form (ngSubmit)="updateQuestion()" #questionVM="ngForm">
+                <question-header [question]="question"></question-header>
+                <h1 class="question-title">
+                    <input style="width:538px;" [(ngModel)]="editTitle" name="editField" #editField="ngModel" required />
+                </h1>
+                <br />
+                <hr />
+                <textarea name="editBody" class="question-control" placeholder="Agrega detalle de tu pregunta - Optional" [(ngModel)]="editBody" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>
+                <div>
+                    <button type="submit" class="btn btn-success fixed-height" [disabled]="!questionVM.form.valid">Update</button>
+                    <button type="button" class="btn btn-info fixed-height" (click)="onQuestionDetailClicked(false)">Cancel</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
