--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="panel-article">
     <div class="questions-container">
-        <div class="details-container">
+        <div class="details-container" *ngIf="!showQuestionEditForm">
             <question-header [question]="question"></question-header>
             <h3 class="question-title">
                 <a [routerLink]="['/question/detail',question.id]">{{question.title}}</a>
@@ -22,10 +22,28 @@
                         </div>
                     </div>
                     <div *ngIf="question.bestAnswer">
-                        <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question.bestAnswer" (onQuestionReportClicked)="onQuestionReportClicked($event,questionId,answerId)"></ap-status>
+                        <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question.bestAnswer" (onQuestionReportClicked)="onQuestionReportClicked($event,questionId,answerId)" (onQuestionDetailClicked)="onQuestionDetailClicked($event)"></ap-status>
                         <ap-comment [isQuestion]='false' [questionId]="question.id" [answerId]="question.bestAnswer?.id"></ap-comment>
                     </div>
                 </div>
+            </div>
+        </div>
+        
+        <div *ngIf="showQuestionEditForm">
+            <div class="details-container">
+                <form (ngSubmit)="updateQuestion()" #questionVM="ngForm">
+                    <question-header [question]="question"></question-header>
+                    <h1 class="question-title">
+                        <input style="width:538px;" [(ngModel)]="editTitle" name="editField" #editField="ngModel" required />
+                    </h1>
+                    <br />
+                    <hr />
+                    <textarea name="editBody" class="question-control" placeholder="Agrega detalle de tu pregunta - Optional" [(ngModel)]="editBody" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>
+                    <div>
+                        <button type="submit" class="btn btn-success fixed-height" [disabled]="!questionVM.form.valid">Update</button>
+                        <button type="button" class="btn btn-info fixed-height" (click)="onQuestionDetailClicked(false)">Cancel</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
