Profile(Dash board) restore previous

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
@@ -24,6 +24,9 @@
     <div class="col-lg-6">
         <div class="description">
             <h1>User</h1>
+            <p>
+                <button (click)="showSuccess()">Toast</button>
+            </p>
         </div>
         <div class="progresstitle">
             your profile is <span class="progress-value">70%</span> complete
