--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -27,6 +27,7 @@
 @import "site/components/tab-panel.component.less";
 @import "site/components/question-details";
 @import "site/components/question-body";
+@import "site/components/dashboard.viewprofile.profile-info";
 .right-border{
     border-right:1px solid;
     color:white;
