--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,8 +1,8 @@
 ﻿<div class="row">
-    <div class="col-md-10" style="height:60vh; border:1px solid">
-        <div class="row" style="height:10vh; border:1px solid"><profile-info></profile-info>></div>
+    <div class="col-md-10" style="min-height:60vh; border:1px solid">
+        <div class="row" style="min-height:10vh; border:1px solid"><profile-info></profile-info></div>
         <div class="row">
-            <div class="col-md-2" style="height:60vh; border:1px solid">
+            <div class="col-md-2" style="min-height:60vh; border:1px solid">
                 <ul>
                     <li><a routerLink="/dashboard/viewprofile/user-question">Question</a></li>
                     <li><a routerLink="/dashboard/viewprofile/user-answer">Answer</a></li>
@@ -13,13 +13,13 @@
                     <li><a routerLink="/dashboard/blog-post">Blog Post</a></li>
                 </ul>
             </div>
-            <div class="col-md-10" style="height:60vh; border:1px solid">
+            <div class="col-md-10" style="min-height:60vh; border:1px solid">
                 <router-outlet></router-outlet>
             </div>
         </div>
     </div>
-    <div class="col-md-2" style="height:60vh; border:1px solid">
-        <div style="height:20vh; border:1px solid">
+    <div class="col-md-2" style="min-height:60vh; border:1px solid">
+        <div style="min-height:20vh; border:1px solid">
             <h1>Credentials</h1>
         </div>
         <profile-stat></profile-stat>
