left panel basic design added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -27,7 +27,8 @@
 @import "site/components/tab-panel.component.less";
 @import "site/components/question-details";
 @import "site/components/question-body";
-@import "site/components/dashboard.viewprofile.profile-info";
+@import "site/components/dashboard_viewprofile";
+@import "site/components/dashboard_viewprofile_profile-info";
 .right-border{
     border-right:1px solid;
     color:white;
