--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -3,11 +3,11 @@
         <div class="row" style="min-height:10vh; border:1px solid"><profile-info></profile-info></div>
         <div class="row">
             <div class="col-md-2" style="min-height:60vh; border:1px solid">
-                <ul>
-                    <li><a routerLink="/dashboard/viewprofile/user-question">Question</a></li>
-                    <li><a routerLink="/dashboard/viewprofile/user-answer">Answer</a></li>
-                    <li><a routerLink="/dashboard/viewprofile/follower">follower</a></li>
-                    <li><a routerLink="/dashboard/viewprofile/following">following</a></li>
+                <ul class="profile-leftmenu">
+                    <li><a routerLink="/dashboard/viewprofile/user-question">Question<span>5</span> </a></li>
+                    <li><a routerLink="/dashboard/viewprofile/user-answer">Answer <span>5</span></a></li>
+                    <li><a routerLink="/dashboard/viewprofile/follower">follower <span>5</span></a></li>
+                    <li><a routerLink="/dashboard/viewprofile/following">following <span>5</span></a></li>
                     <li><a routerLink="/dashboard/viewprofile/bookmark">bookmark</a></li>
                     <li><a routerLink="/dashboard/viewprofile/blog-create">Blog Create</a></li>
                     <li><a routerLink="/dashboard/blog-post">Blog Post</a></li>
