--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
@@ -7,7 +7,7 @@
     line-height: 32px;
     height: 32px;
     text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
-    padding-top: 0;
+    padding:2px 3px;
     padding-bottom: 0;
 }
 
