Add credentials Html added only

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/modal.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/modal.less
@@ -1,9 +1,18 @@
 ﻿.modal-overlay {
-    overflow-y:scroll;
+    overflow-y: scroll;
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.exit-button {
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 30px;
+    color: #c5c1c1;
 }
