--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -14,6 +14,7 @@
                 </ul>
             </div>
             <div class="col-md-10" style="min-height:60vh; border:1px solid">
+                <!--<add-credential></add-credential>-->
                 <router-outlet></router-outlet>
             </div>
         </div>
