User object reference error fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
@@ -1,10 +1,7 @@
 ﻿<style>
-    /*.modal-container {
-        border-radius: 5px;
-    }*/
     .credential-dialog {
         margin: 15% auto;
-        max-width: 60%;
+        max-width: 45%;
     }
 
     .profile-modal-body {
@@ -36,7 +33,6 @@
     .modal-header h3 {
         font-weight: bold;
     }
-    /**/
 </style>
 
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
@@ -54,8 +50,8 @@
                 </div>
                 <div class="profile-modal-button-container">
                     <a>Delete</a>
-                    <a>Cancle</a>
-                    <button class="btn btn-sm btn-primary">Save</button>
+                    <a (click)="onClickedExit()">Cancle</a>
+                    <button class="btn btn-sm btn-primary" (click)="saveCredential()">Save</button>
                 </div>
             </div>
         </div>
