add credentials back end save, Answer panel right image

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
@@ -46,12 +46,12 @@
             <div class="profile-modal-body">
                 <i class="fa fa-user"></i><span>Edit</span>
                 <div>
-                    <input type="text" />
+                    <input type="text" [(ngModel)]="title"/>
                 </div>
                 <div class="profile-modal-button-container">
                     <a>Delete</a>
                     <a (click)="onClickedExit()">Cancle</a>
-                    <button class="btn btn-sm btn-primary" (click)="saveCredential()">Save</button>
+                    <button class="btn btn-sm btn-primary" (click)="saveCredential(title)">Save</button>
                 </div>
             </div>
         </div>
