--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,4 +1,5 @@
-﻿<div class="row">
+﻿<nav-bar></nav-bar>
+<div class="row">
     <div class="col-md-10" style="min-height:60vh; border:1px solid">
         <div class="row" style="min-height:10vh; border:1px solid"><profile-info></profile-info></div>
         <div class="row">
