--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -1,4 +1,4 @@
-﻿<div class="row row-fix">
+﻿<div class="row row-fix inline-display">
     <div *ngIf="!isAnonymous">
         <div *ngIf="userObj">
             <img class="user-image " src="../../../../profile/{{userObj?.imageUrl}}" />
