--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
@@ -1,4 +1,14 @@
-﻿<div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
+﻿<style>
+    .disabledFollowingImg {
+        opacity: .1
+    }
+    .enableFollowingImg {
+        opacity: 1
+    }
+    
+</style>
+
+<div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
     <div *ngIf="!showQuestionEditForm">
         <div class="dialog">
             <div class="exit-button" (click)="onClickedExit()">x</div>
@@ -14,7 +24,9 @@
                 <div class="details-container">
                     <div class="article-details">
                         <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
-                        <div class="pull-right">xxx</div>
+                        <div class="pull-right"><a (click)="QuestionFollowing(question)">
+                            <img [ngClass]="{ 'disabledFollowingImg': !isFollowing, 'enableFollowingImg': isFollowing  }" src="../../images/FollowingImage.jpg"/>
+                        </a></div>
                         <div>
                             <p class="answer-text" [innerHTML]="question.bestAnswer?.text"></p>
                             <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question?.bestAnswer" (onQuestionDetailClicked)="onQuestionDetailClicked($event)"> </ap-status>
