akahs:QUestion following added in both questionbody and question details

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -1,4 +1,14 @@
-﻿<div #answerAnchor></div>
+﻿<style>
+    .disabledFollowingImg {
+        opacity: .1;
+    }
+
+    .enableFollowingImg {
+        opacity: 1;
+    }
+</style>
+
+<div #answerAnchor></div>
 <div #questionReport></div>
 
 <div class="left-panel">
@@ -37,6 +47,11 @@
             <div class="article-details" *ngIf="answer">
                 <div id="{{answer?.id}}">
                     <user-info [userObj]="answer?.userViewModel" [viewDate]="answer?.createdOn"></user-info>
+                    <div class="pull-right">
+                        <a (click)="QuestionFollowing(answer)">
+                            <img [ngClass]="{ 'enableFollowingImg': !answer?.isFollowing, 'disabledFollowingImg': answer?.isFollowing  }" src="../../images/FollowingImage.jpg" />
+                        </a>
+                    </div>
                     <p class="answer-text" [innerHTML]="answer.text"></p>
                     <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="answer" (onQuestionReportClicked)="onQuestionReportClicked($event,questionId,answerId)"> </ap-status>
                     <ap-comment [isQuestion]='false' [questionId]="question?.id" [answerId]="answer.id"></ap-comment>
