--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
@@ -1,11 +1,11 @@
 ﻿<style>
     .disabledFollowingImg {
-        opacity: .1
+        opacity: .1;
     }
+
     .enableFollowingImg {
-        opacity: 1
+        opacity: 1;
     }
-    
 </style>
 
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
@@ -24,9 +24,11 @@
                 <div class="details-container">
                     <div class="article-details">
                         <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
-                        <div class="pull-right"><a (click)="QuestionFollowing(question)">
-                            <img [ngClass]="{ 'disabledFollowingImg': !isFollowing, 'enableFollowingImg': isFollowing  }" src="../../images/FollowingImage.jpg"/>
-                        </a></div>
+                        <div class="pull-right">
+                            <a (click)="QuestionFollowing(question)">
+                                <img [ngClass]="{ 'disabledFollowingImg': !isFollowing, 'enableFollowingImg': isFollowing  }" src="../../images/FollowingImage.jpg" />
+                            </a>
+                        </div>
                         <div>
                             <p class="answer-text" [innerHTML]="question.bestAnswer?.text"></p>
                             <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question?.bestAnswer" (onQuestionDetailClicked)="onQuestionDetailClicked($event)"> </ap-status>
