Save description of user call to controller

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
@@ -16,13 +16,14 @@
     .profile-info {
         float: left;
         font-family: myriadpro-regular;
+        width:100%;
     }
 
         .profile-info > h1 {
             font-family: myriadpro-regular;
         }
 
-        .profile-info > a {
+        .profile-info  a {
             display: block;
             color: @profile-info-color;
         }
