--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -8,6 +8,11 @@
     border: none;
 }
 
+.backgroundset {
+    min-height: 66px !important;
+    background-image: url(../images/background.png);
+}
+
 .navbar-default .navbar-nav {
     > li > form > a {
         color: white;
