Credential title edit and delete fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
@@ -40,18 +40,19 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
+                {{credential.title}}
                 <h3>Edit Credentials</h3>
                 <p>Credentials also appear on answers you write.</p>
             </div>
             <div class="profile-modal-body">
                 <i class="fa fa-user"></i><span>Edit</span>
                 <div>
-                    <input type="text" [(ngModel)]="title"/>
+                    <input type="text" [(ngModel)]="credential.title"/>
                 </div>
                 <div class="profile-modal-button-container">
-                    <a>Delete</a>
+                    <a (click)="DeleteCredentialTitle()">Delete</a>
                     <a (click)="onClickedExit()">Cancle</a>
-                    <button class="btn btn-sm btn-primary" (click)="saveCredential(title)">Save</button>
+                    <button class="btn btn-sm btn-primary" (click)="saveCredentialTitle()">Save</button>
                 </div>
             </div>
         </div>
