--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -1,15 +1,17 @@
 ﻿<style>
-    .edit{
-        margin-left:5px;
-    }
-    .edit span {
-        visibility: hidden;
+    .edit {
+        margin-left: 5px;
     }
 
-    .edit:hover span {
-        visibility: visible;
-        color: #f6912b;
-    }
+        .edit span {
+            visibility: hidden;
+        }
+
+        .edit:hover span {
+            visibility: visible;
+            color: #f6912b;
+        }
+
     .user-name {
         margin-top: 10px;
     }
@@ -26,15 +28,19 @@
     .profile-info h1 {
         display: inline;
     }
-    .user-name a{
-        display:inline-block;
+
+    .user-name a {
+        display: inline-block;
     }
+
     .panel-heading {
         position: relative;
     }
-    .credential a{
-        display:inline-block;
+
+    .credential a {
+        display: inline-block;
     }
+
     .heading {
         display: inline;
     }
@@ -87,13 +93,15 @@
         min-height: 50px;
         min-width: 100%;
     }
-    .btn-container{
-        text-align:right;
-        margin-top:10px;
+
+    .btn-container {
+        text-align: right;
+        margin-top: 10px;
     }
-     .btn-container a{
-         display:inline-block;
-     }
+
+        .btn-container a {
+            display: inline-block;
+        }
 </style>
 <div>
     <div #credentialDialogAnchor></div>
@@ -125,20 +133,26 @@
             </div>
             <div [hidden]="hasCredential" class="credential">
                 <a>{{credential.title}}</a>
-                <a (click)="openCredentialDialogBox()"><span><i class="fa fa-edit"></i>Edit</span> </a>
+                <a (click)="openCredentialDialogBox()" class="edit"><span><i class="fa fa-edit"></i>Edit</span> </a>
             </div>
-            <div  [hidden]="!showDescription">
-                <a (click)="showDescription = false">Write Description about yourself</a>
+            <!-- ================Description============= -->
+            <div [hidden]="!hasDescription">
+                <div [hidden]="!showDescription">
+                    <a (click)="showDescription = false">Write Description about yourself</a>
+                </div>
+            </div>
+            <div [hidden]="(!hasDescription && !showDescription)">
+                <div [innerHTML]="credential.description"></div>
+                <a class="edit"><span (click)="showDescription = false"><i class="fa fa-edit"></i>Edit</span> </a>
             </div>
             <div class="description-panel" style="border:1px solid;width:100%" [hidden]="showDescription">
-                <quill-editor [(ngModel)]="answerText" [ngModelOptions]="{standalone: true}"
-                              [modules]="{  toolbar: [['bold', 'italic', 'underline'], ['link', 'image']] }"
+                <quill-editor [(ngModel)]="credential.description" [ngModelOptions]="{standalone: true}"
+                              [modules]="{toolbar: [['bold', 'italic', 'underline'], ['link', 'image']]}"
                               required name="answerField" #answerField="ngModel"></quill-editor>
                 <div class="btn-container">
                     <a (click)="showDescription = true">cancel</a>
-                    <button class="btn btn-primary" (click)="updateDecription(answerText)">Update</button>
+                    <button class="btn btn-primary" (click)="updateDecription()">Update</button>
                 </div>
-                
             </div>
             <ul>
                 <li><a>Twitter</a></li>
